<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutEditionQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.ListeQuestionActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_listeNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/niveau" />

                    <Spinner
                        android:id="@+id/spinner_niveau"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/niveau" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editText_sujet"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/sujet"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText_explication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/explications"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="300dp" />

                <Button
                    android:id="@+id/button_question_contenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voir_contenu"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_preview_24"
                    app:iconSize="@android:dimen/app_icon_size" />

                <Button
                    android:id="@+id/button_question_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prendre_photo"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_add_a_photo_24"
                    app:iconSize="@android:dimen/app_icon_size" />

                <Button
                    android:id="@+id/button_question_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enregistrement_vocal"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_mic_24"
                    app:iconSize="@android:dimen/app_icon_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar_EditionActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/purple_200"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="15dp"
        app:menu="@menu/bottom_app_bar_edition_activity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_editionQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/ajouter_une_question"
        android:focusable="true"
        app:backgroundTint="@color/purple_500"
        app:layout_anchor="@id/bottomAppBar_EditionActivity"
        app:srcCompat="@drawable/ic_done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
