<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutEditionQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.ListeQuestionActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_QuestionNiveau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"/>
                <TextView
                    android:id="@+id/text_QuestionSujet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sujet"
                    android:importantForAutofill="no"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/text_QuestionUtilisateur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:importantForAutofill="no"
                    android:minHeight="30dp" />
                <TextView
                    android:id="@+id/text_QuestionExplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/explications"
                    android:importantForAutofill="no"
                    android:minHeight="300dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_reponse_contenu_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/voir_question"
                        android:textAlignment="center"
                        app:cornerRadius="@android:dimen/app_icon_size"
                        app:icon="@drawable/ic_baseline_preview_24"
                        app:iconSize="@android:dimen/app_icon_size" />

                    <Button
                        android:id="@+id/button_reponse_contenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/voir_reponse"
                        android:textAlignment="center"
                        app:cornerRadius="@android:dimen/app_icon_size"
                        app:icon="@drawable/ic_baseline_preview_24"
                        app:iconSize="@android:dimen/app_icon_size" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_reponse_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prendre_photo"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_add_a_photo_24"
                    app:iconSize="@android:dimen/app_icon_size" />

                <Button
                    android:id="@+id/button_reponse_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enregistrement_vocal"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_mic_24"
                    app:iconSize="@android:dimen/app_icon_size" />                
            </LinearLayout>

            
        </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar_EditionReponseActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/purple_200"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="15dp"
        app:menu="@menu/bottom_app_bar_edition_activity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_editionReponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/ajouter_une_question"
        android:focusable="true"
        app:backgroundTint="@color/purple_500"
        app:layout_anchor="@id/bottomAppBar_EditionReponseActivity"
        app:srcCompat="@drawable/ic_done" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>