<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutVoirReponse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_VoirNiveau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/text_reponseSujet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sujet"
                android:importantForAutofill="no"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_reponseUtilisateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:minHeight="30dp" />

            <TextView
                android:id="@+id/text_reponseExplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/explications"
                android:importantForAutofill="no"
                android:minHeight="300dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_affiche_contenu_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voir_question"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_preview_24"
                    app:iconSize="@android:dimen/app_icon_size" />

                <Button
                    android:id="@+id/button_affiche_contenu_reponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voir_reponse"
                    android:textAlignment="center"
                    app:cornerRadius="@android:dimen/app_icon_size"
                    app:icon="@drawable/ic_baseline_preview_24"
                    app:iconSize="@android:dimen/app_icon_size" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom|end">

        <Button
            android:id="@+id/button_supprimer"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/supprimer"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconSize="?attr/minTouchTargetSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>